# flow-as

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  EDUCATIONAL_OVERVIEW.md  FLOW_AGENT_AS_CONTROL_LAYER_REPORT.md  HERMES_FINAL_VERDICT.md  HERMES_GOOGLE_PROVIDER_INVESTIGATION.md  MARKETING_CONTENT.md  PRESS_KIT.md  README.md  REPO_HYGIENE_CLEANUP_PLAN_2026-07-22.md  REPO_HYGIENE_MANIFEST.md  compose.debug.yaml  compose.yaml  discord-bot.py  docker-compose.prod.yml  docker-compose.workflow.yml  docker-compose.yml  ecosystem.config.cjs  test_dashboard_auth.sh  test_intake_auth.sh
alembic/: env.py
api/: index.py
services/bizbrain_lite/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/bizbrain_lite/app/: main.py
services/bizbrain_lite/app/api/: agent_zero_reviews.py  ai_readiness.py  auth.py  concierge.py  deps.py  flow_control.py  flow_health.py  fog_lift_kit.py  health.py  hermes_skills.py  openclaw_intake.py  performance.py  worker_jobs.py
services/bizbrain_lite/app/config/: database.py  settings.py
services/bizbrain_lite/app/models/: ai_readiness_report.py  audit_log.py  concierge_booking.py  flow_job_record.py  flow_reflection_record.py  flow_skill_record.py  user.py
services/bizbrain_lite/bizbrain_lite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/bizbrain_lite/docs/: api_endpoint_list.md  deployment.md  recommended_build_order.md  redis_usage.md
services/bizbrain_lite/migrations/: 002_faas_worker_claim_contract.sql
services/bizbrain_lite/tests/: conftest.py  test_capabilities.py  test_product_features.py
(+200 files in other folders)
