[project]
name = "bizbrain-lite"
version = "0.1.0"
description = "Lightweight control plane for TB10X operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "redis>=5.0.0",
  "pydantic>=2.8.0",
  "pydantic[email]>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "jsonschema>=4.23.0",
  "httpx>=0.27.0",
  "PyJWT>=2.12.0",
  "bcrypt>=4.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

